# LiveNeuron

./: .flake8  .gitignore  .readthedocs.yaml  DOCUMENTATION_UPDATE_SUMMARY.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  READTHEDOCS_SETUP.md  display_mode_demo.py  example.py  jupyter_responsive_demo.py  liveneuron_usability_questionnaire.tex  push_to_github.sh  pyproject.toml  start_realtime_viz.py  test_viz2d.py  validate_package.py  viz2d_demo.ipynb
.github/workflows/: lint.yml  test.yml
docs/: .gitignore  Makefile  README.rst  api_reference.rst  changelog.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  requirements.txt  user_guide.rst
scripts/: macos.sh  macos_setup.sh
src/eelbrain_plotly_viz/: __init__.py  _app_controller_helper.py  _data_loader_helper.py  _layout_helper.py  _plot_factory_helper.py  _viz_2d.py  app_controller.py  app_controller_helper.py  app_controller_mixin.py  data_loader.py  data_loader_helper.py  data_loader_mixin.py  layout_builder.py  layout_builder_mixin.py  plot_factory.py  plot_factory_helper.py  plot_factory_mixin.py  sample_data.py  simple_dash_container.py  viz_2d.py  viz_2d_back.py
src/liveneuro/: __init__.py  _app_controller_helper.py  _data_loader_helper.py  _layout_helper.py  _liveneuro.py  _plot_factory_helper.py  _sample_data.py  _viz_2d.py
tests/: conftest.py  mock_utils.py  test_basic.py  test_imports.py  test_integration.py  test_performance.py  test_with_mocks.py
